--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Olist - Front End Test</title>
 
         <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
         <!-- Style Imports -->
         <link rel="stylesheet" href="./assets/styles/style.css">
