--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
 
         <title>Olist - Front End Test</title>
+        <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico"/>
 
         <meta http-equiv="content-type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
